--- a/app/views/layouts/web/application.html.erb
+++ b/app/views/layouts/web/application.html.erb
@@ -11,10 +11,14 @@
 	<meta name="viewport" content="width=device-width">
 
 	<link rel="stylesheet" href="/css/normalize.css">
+	<link rel="stylesheet" href="/css/jquery.jscrollpane.css">
 	<link rel="stylesheet" href="/css/main.css">
 	<script src="/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
+<div class="parallax1"></div>
+<div class="parallax2"></div>
+
 <div id="wrapper">
 
 	<header id="header">
@@ -40,7 +44,7 @@
 
 		<section class="header-middle">
 			<a href="/">
-				<img src="/img/titles/default.png" width="1082" height="324" alt="" title="" />
+				<img src="<%= @header_img[:src] %>" width="<%= @header_img[:width] %>" height="<%= @header_img[:height] %>" alt="" title="" />
 			</a>
 		</section>
 
@@ -65,16 +69,29 @@
 	<div class="wrap">
 		<div class="copyright">Copyright © 2012 II Международная Ассамблея Художников «Пластовская осень»</div>
 		<ul class="footer-logo">
-			<li><a href="#" target="_blank"><img src="/img/logo-footer1.jpg" alt="" title="" width="101" height="67" /></a></li>
-			<li><a href="#" target="_blank"><img src="/img/logo-footer2.png" alt="" title="" width="93" height="78" /></a></li>
+			<li><a href="#" target="_blank"><img src="./img/logo-footer1.jpg" alt="" title="" width="101" height="67" /></a></li>
+			<li><a href="#" target="_blank"><img src="./img/logo-footer2.png" alt="" title="" width="93" height="78" /></a></li>
 		</ul>
 	</div>
 </footer><!-- #footer -->
 
+<div class="shadow"></div>
+<div class="pop-up">
+	<div class="pop-up-close"></div>
+	<div class="left">
+		<img src="./img/gubernator.png" alt="" title="" width="156" height="178" />
+	</div>
+	<div class="pop-up-body">
+		<p><span class="pop-up-quote-left"></span>В этом году Пластовская премия приобрела статус международной,  и стала весомее, и это еще раз подчеркивает наше стремление к культурному сотрудничеству со странами Содружества. Под эгидой «Пластовской осени» на родине мастера собираются  его последователи, чтобы подчеркнуть — пластовские традиции живы и не имеют национальных границ.<span class="pop-up-quote-right"></span></p>
+		<footer>Губернатор Ульяновской области:  Сергей Морозов.</footer>
+	</div>
+</div>
 
-<script src="/js/vendor/jquery-1.8.3.min.js"></script>
-<script src="/js/plugins.js"></script>
-<script src="/js/main.js"></script>
-<script src="/js/jquery.carouFredSel-6.1.0-packed.js"></script>
+<script type="text/javascript" src="/js/vendor/jquery-1.8.3.min.js"></script>
+<script type="text/javascript" src="/js/plugins.js"></script>
+<script type="text/javascript" src="/js/jquery.parallax.min.js"></script>
+<script type="text/javascript" src="/js/jquery.jscrollpane.min.js"></script>
+<script type="text/javascript" src="/js/jquery.carouFredSel-6.1.0-packed.js"></script>
+<script type="text/javascript" src="/js/main.js"></script>
 </body>
 </html>
