--- a/app/views/layouts/web/application.html.erb
+++ b/app/views/layouts/web/application.html.erb
@@ -69,8 +69,8 @@
 	<div class="wrap">
 		<div class="copyright">Copyright © 2012 II Международная Ассамблея Художников «Пластовская осень»</div>
 		<ul class="footer-logo">
-			<li><a href="#" target="_blank"><img src="./img/logo-footer1.jpg" alt="" title="" width="101" height="67" /></a></li>
-			<li><a href="#" target="_blank"><img src="./img/logo-footer2.png" alt="" title="" width="93" height="78" /></a></li>
+			<li><a href="#" target="_blank"><img src="/img/logo-footer1.jpg" alt="" title="" width="101" height="67" /></a></li>
+			<li><a href="#" target="_blank"><img src="/img/logo-footer2.png" alt="" title="" width="93" height="78" /></a></li>
 		</ul>
 	</div>
 </footer><!-- #footer -->
@@ -79,7 +79,7 @@
 <div class="pop-up">
 	<div class="pop-up-close"></div>
 	<div class="left">
-		<img src="./img/gubernator.png" alt="" title="" width="156" height="178" />
+		<img src="/img/gubernator.png" alt="" title="" width="156" height="178" />
 	</div>
 	<div class="pop-up-body">
 		<p><span class="pop-up-quote-left"></span>В этом году Пластовская премия приобрела статус международной,  и стала весомее, и это еще раз подчеркивает наше стремление к культурному сотрудничеству со странами Содружества. Под эгидой «Пластовской осени» на родине мастера собираются  его последователи, чтобы подчеркнуть — пластовские традиции живы и не имеют национальных границ.<span class="pop-up-quote-right"></span></p>
