social network links in settings

--- a/app/views/layouts/web/application.html.erb
+++ b/app/views/layouts/web/application.html.erb
@@ -35,9 +35,9 @@
 					<li><a href="<%= url_for(locale: :de) %>" class="lang-de"></a></li>
 				</ul>
 				<ul class="social-networks">
-					<li><a href="https://twitter.com/" target="_blank"><img src="/img/icon-twitter.png" width="8" height="13" alt="" title="" /></a></li>
-					<li><a href="https://facebook.com/" target="_blank"><img src="/img/icon-facebook.png" width="8" height="15" alt="" title="" /></a></li>
-					<li><a href="http://vk.com/" target="_blank"><img src="/img/icon-vk.png" width="20" height="13" alt="" title="" /></a></li>
+					<li><a href="<%= Settings.twitter_url %>" target="_blank"><img src="/img/icon-twitter.png" width="8" height="13" alt="" title="" /></a></li>
+					<li><a href="<%= Settings.facebook_url %>" target="_blank"><img src="/img/icon-facebook.png" width="8" height="15" alt="" title="" /></a></li>
+					<li><a href="<%= Settings.vkontakte_url %>" target="_blank"><img src="/img/icon-vk.png" width="20" height="13" alt="" title="" /></a></li>
 				</ul>
 			</div>
 		</section>
