--- a/app/views/layouts/web/admin/application.html.haml
+++ b/app/views/layouts/web/admin/application.html.haml
@@ -30,7 +30,7 @@
                 %li= link_to "Пользователи", admin_users_path
                 %li= link_to "Меню", admin_menus_path
                 %li= link_to "Страницы", admin_pages_path
-                / %li= link_to "Подписчики", admin_subscribers_path
+                %li= link_to "Обр. связь", admin_feedback_index_path
                 %li= link_to "Настройки сайта", new_admin_setting_path
             .span3
               .btn-group
