members and pictures

--- a/app/views/layouts/web/application.html.erb
+++ b/app/views/layouts/web/application.html.erb
@@ -93,5 +93,6 @@
 <script type="text/javascript" src="/js/jquery.jscrollpane.min.js"></script>
 <script type="text/javascript" src="/js/jquery.carouFredSel-6.1.0-packed.js"></script>
 <script type="text/javascript" src="/js/main.js"></script>
+<%= javascript_include_tag :defaults,  "nested_form" %>
 </body>
 </html>
