--- a/app/views/layouts/web/admin/application.html.haml
+++ b/app/views/layouts/web/admin/application.html.haml
@@ -23,25 +23,26 @@
       .navbar-inner
         .container
           .row
-            .span3
-              = link_to "#{ Settings.site_name } Admin", admin_root_path, :class => 'brand'
-            .span6
+            .span2
+              = link_to "#{ Settings.site_name }", root_path, :class => 'brand'
+            .span7
               %ul.nav
                 %li= link_to "Пользователи", admin_users_path
                 %li= link_to "Меню", admin_menus_path
                 %li= link_to "Страницы", admin_pages_path
+                %li= link_to "Участники", admin_members_path
                 %li= link_to "Обр. связь", admin_feedback_index_path
-                %li= link_to "Настройки сайта", new_admin_setting_path
+                %li= link_to "Настройки", new_admin_setting_path
             .span3
               .btn-group
-                %button.btn.dropdown-toggle{ :"data-toggle" => "dropdown", :href => "#" }
+                %button.btn.btn-small.dropdown-toggle{ :"data-toggle" => "dropdown", :href => "#" }
                   =current_user.email
                   %span.caret
                 %ul.dropdown-menu
                   %li= link_to "Профиль", edit_admin_user_path(current_user)
                   %li= link_to "Выйти", session_path, :method => :delete
               .btn-group
-                %button.btn.dropdown-toggle{ :"data-toggle" => "dropdown", :href => "#" }
+                %button.btn.btn-small.btn-info.dropdown-toggle{ :"data-toggle" => "dropdown", :href => "#" }
                   = locale
                   %span.caret
                 %ul.dropdown-menu
