--- a/public/css/main.css
+++ b/public/css/main.css
@@ -313,6 +313,22 @@ ul, ol {
 	z-index: 1;
 }
 
+.button {
+	background: url(../img/buttons.png) no-repeat;
+	text-align: center;
+	text-transform: uppercase;
+	text-decoration: none;
+	border: 0;
+	color: #ffffff;
+	display: inline-block;
+	padding: 0;
+	margin: 0;
+}
+
+.button:hover {
+	color: #ffffff;
+}
+
 /* Header
 -----------------------------------------------------------------------------*/
 #header {
@@ -848,14 +864,9 @@ ul, ol {
 }
 
 .about-plastov .button {
-	background: url(../img/buttons.png) no-repeat;
 	width: 175px;
 	height: 56px;
 	line-height: 48px;
-	display: inline-block;
-	text-align: center;
-	text-transform: uppercase;
-	color: #ffffff;
 	position: absolute;
 	top: 270px;
 	left: 345px;
@@ -1649,10 +1660,20 @@ blockquote.blockquote-nas {
 
 .b-stat-work ul li.b-stat-work-title,
 .b-stat-work ul li.b-stat-work-year,
-.b-stat-work ul li.b-stat-work-size {
+.b-stat-work ul li.b-stat-work-size,
+.b-stat-work ul li.b-stat-work-picture-name {
  	background: url(../img/dotted.png) bottom center no-repeat;
-	padding-bottom: 10px;
-	margin-bottom: 4px;
+	padding-bottom: 7px;
+	margin-bottom: 7px;
+}
+
+.b-stat-work ul li.b-stat-work-picture-name,
+.b-stat-work ul li.b-stat-work-author {
+	font-size: 14px;
+}
+
+.b-stat-work ul li.b-stat-work-author {
+	margin-bottom: 7px;
 }
 
 .b-stat-work .b-stat-work-frame {
@@ -1767,6 +1788,167 @@ blockquote.blockquote-nas {
 	left: 906px;
 	bottom: 49px;
 }
+
+/* Page Sort */
+.wrap-filter-work {
+	width: 1078px;
+	margin: 0 auto;
+}
+
+.wrap-filter-work h1 {
+	float: left;
+	margin: 20px 0 0;
+}
+
+.button-toggle-filter {
+	background: url(../img/bg-btn-filter.png) no-repeat;
+	width: 201px;
+	height: 67px;
+	border: 0;
+	font: 20px "siemens_slabbold";
+	padding: 0 0 0 30px;
+	float: right;
+	margin-bottom: 15px;
+}
+
+.button-toggle-filter.active {
+	margin-bottom: 0;
+}
+
+.button-toggle-filter span {
+	background: url(../img/arrow-filter.png) right no-repeat;
+	padding-right: 30px;
+}
+
+.filter-work {
+	background: url(../img/bg-filter.png) no-repeat;
+	width: 1078px;
+	height: 331px;
+	margin-top: -20px;
+	position: relative;
+	display: none;
+}
+
+.filter-work h2 {
+	margin-bottom: 10px;
+}
+
+.filter-work ul {
+	margin: 0;
+}
+
+.filter-work ul li {
+	padding: 0;
+	background: none;
+	margin-bottom: 5px;
+}
+
+.filter-work ul li .ez-checkbox {
+	margin: 6px 15px 0 0;
+	float: left;
+}
+
+.filter-work-nominations {
+	float: left;
+	width: 504px;
+	margin: 44px 0 0 73px;
+}
+
+.filter-work-nominations li {
+	float: left;
+	width: 250px;
+}
+
+.filter-work-years {
+	float: left;
+	width: 110px;
+	height: 225px;
+	margin: 44px 20px 0 0;
+	border-right: 1px dotted #000000;
+}
+
+.filter-work-authors {
+	float: left;
+	margin: 44px 0 0 0;
+}
+
+.filter-live-search input[type="text"] {
+	width: 192px;
+	padding: 0 7px;
+	height: 27px;
+	line-height: 27px;
+	background-color: #fef102;
+	outline: none;
+	font-size: 12px;
+	font-style: italic;
+
+
+	border: 5px solid #ffffff;
+	-webkit-border-radius: 8px;
+	-moz-border-radius: 8px;
+	border-radius: 8px;
+
+	-webkit-box-shadow: inset 0 1px 5px 1px rgba(0, 0, 0, 0.3);
+	-moz-box-shadow: inset 0 1px 5px 1px rgba(0, 0, 0, 0.3);
+	box-shadow: inset 0 1px 5px 1px rgba(0, 0, 0, 0.3);
+}
+
+.filter-live-search .filter-live-result {
+	background: #ffffff;
+	width: 206px;
+	position: relative;
+	left: 5px;
+	top: -5px;
+
+	-webkit-box-shadow: 0 2px 5px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0 2px 5px rgba(0,0,0,0.75);
+	box-shadow: 0 2px 5px rgba(0,0,0,0.75);
+}
+
+.filter-live-search .filter-live-result a {
+	font-size: 12px;
+	font-style: italic;
+	color: #000000;
+	display: block;
+	height: 100%;
+	padding: 3px 5px;
+}
+
+.filter-live-search .filter-live-result a:hover {
+	background-color: #fff45d;
+}
+
+.button.button-search {
+ 	width: 91px;
+	height: 58px;
+	padding-bottom: 9px;
+	background-position: 0 -56px;
+	top: 77px;
+	right: 60px;
+}
+
+.button-filter,
+.button-show-all {
+	width: 189px;
+	height: 60px;
+	padding-bottom: 9px;
+	background-position: 0 -114px;
+}
+
+.button-filter {
+	left: 150px;
+	bottom: 40px;
+}
+
+.button-show-all {
+	left: 355px;
+	bottom: 40px;
+}
+
+.filter-work .button {
+	position: absolute;
+}
+
 
 /* Footer
 -----------------------------------------------------------------------------*/
