--- a/app/views/web/admin/menu_items/_item.html.haml
+++ b/app/views/web/admin/menu_items/_item.html.haml
@@ -1,15 +1,16 @@
 %li
-  .block
+  .block 
+    / { class: item.has_children? ? 'btn-info': '' }
     %span
       %strong Название:
-      = item.name
+      %span.badge.badge-success= item.name
     %span
       %strong УРЛ:
-      = item.slug
+      %span.badge.badge-info= item.slug
     %span
       %strong Сорт.:
-      = item.position
-      %br
+      %span.badge.badge-inverse= item.position
+
       = link_to "Редактировать", edit_admin_menu_menu_item_path(@menu.id, item.id), class: 'edit-menu-item-btn'
       |
       = link_to "Удалить", admin_menu_menu_item_path(@menu.id, item.id), class: 'delete-menu-item-btn', method: :delete
