--- a/app/views/web/admin/pages/index.html.haml
+++ b/app/views/web/admin/pages/index.html.haml
@@ -1,27 +1,1 @@
-%h1 Страницы
-
-%br
-= link_to t('views.admin.pages.index.add_new_page'), new_admin_page_path, :class => 'btn btn-primary'
-%br
-%br
-
-%table.table.table-bordered
-  %thead
-    %tr
-      %th.id-col #
-      %th= t('activerecord.attributes.pages.title')
-      %th= t('activerecord.attributes.pages.slug')
-      %th= t('activerecord.attributes.pages.author')
-      %th.actions-col
-  %tbody
-    - @pages.each do |page|
-      %tr
-        %td.id-col= page.id
-        %td= link_to page.title, edit_admin_page_path(page)
-        %td= link_to page.slug, edit_admin_page_path(page)
-        %td= link_to page.author.email, edit_admin_user_path(page.author.id)
-        %td.actions-col
-          = link_to t('views.admin.pages.index.edit_page'), edit_admin_page_path(page), class: 'btn btn-info'
-          = link_to t('views.admin.pages.index.delete_page'), admin_page_path(page), method: :delete, class: 'btn btn-alert'
-
-/ = paginate @pages
+= admin_index_scaffold @pages, [ :title, :slug ], [ :edit, :destroy ]
