--- a/app/views/layouts/web/admin/application.html.haml
+++ b/app/views/layouts/web/admin/application.html.haml
@@ -39,7 +39,11 @@
                   %ul.dropdown-menu{ role: "menu" }
                     %li= link_to "Категории новостей", admin_news_categories_path
                     %li= link_to "Новости", admin_news_index_path
-                %li= link_to "Участники", admin_members_path
+                %li.dropdown
+                  = link_to "Участники", "#", class: "dropdown-toggle"
+                  %ul.dropdown-menu{ role: "menu" }
+                    %li= link_to "Участники", admin_members_path
+                    %li= link_to "Номинации", admin_nominations_path
                 %li= link_to "Обр. связь", admin_feedback_index_path
             .span3
               .btn-group
